# duck-and-cover

./: .gitignore  .pre-commit-config.yaml  README.md  build_dataframe.py  collect_album_data.py  collect_artist_data.py  constants.py  dcgan.py  gan.py  genre_reduction.py  genre_reduction_ae.py  genre_reduction_blocking.py  genre_reduction_pca.py  internal_genre_embedding.py  label_covers.py  learning_progress.dvc  ml_mastery_progan.py  plot_gif.py  progan.py  pyproject.toml  requirements.txt  run_on_sagemaker.py  run_trainscript.sh  simple_gan.py  simple_wgan.py  spotify_client.py  spotify_client_template.py  tf_init.py  utils.py  wgan.py  wgan_year.py
.dvc/: config
.githooks/: pre-commit
GenreEncoding/: build_dataframe.py  explorative_analysis.py  genre_reduction.py  genre_reduction_ae.py  genre_reduction_blocking.py  genre_reduction_clustering.py  genre_reduction_pca.py  keras_losses.py
Loader/: __init__.py  cover_loader.py  data_loader.py
Networks/: __init__.py  base.py  networks.py  proGAN.py  progan_utils.py  simple_gan.py  simple_wgan.py  wgan_utils.py
config/: __init__.py  config.yaml  dcgan-mnist.yaml  dcgan-spotify.yaml  ddpm-spotify.yaml  progan-mnist.yaml  progan-spotify.yaml  progan-year-mnist.yaml  progan-year-spotify.yaml  stylegan-mnist.yaml  stylegan-spotify.yaml  wgan-mnist.yaml  wgan-spotify.yaml
data/: .gitignore  album_data_frame.json.dvc  celeba.dvc  covers300.dvc  covers64.dvc  genres.txt  remaining_genres.txt  test_album_ids.txt  test_data_meta.json
data_collection/: __init__.py  add_caption_and_upload_to_hf.py  collect_artist_data.py  (+2 more)
(+57 files in other folders)
