[tool.poetry]
name = "duck-and-cover"
version = "0.1.0"
description = ""
authors = ["Manuel Schmitz <manuel.schmitz@gmx.net>"]
readme = "README.md"
packages = [{include = "duck_and_cover"}]

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.13.1"
transformers = "^4.30.2"
torch = "<2.0.0"
pillow = "^10.0.0"
scikit-learn = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
ruff = "^0.0.255"
pre-commit = "^2.17.0"

[tool.poetry.group.data-collection.dependencies]
dvc = {version = "^2.9.5", extras = ["s3"]}
spotipy = "^2.23.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501", "B905", "B008"]